More convenient usage

--- a/fig.yml
+++ b/fig.yml
@@ -1,14 +1,14 @@
 zookeeper:
-  image: wurstmeister/zookeeper
+  image: jdeastwood/zookeeper
   ports: 
     - "2181"
 kafka:
-  image: wurstmeister/kafka:0.8.2.0
+  image: jdeastwood/kafka:v1
   ports:
     - "9092"
   links: 
     - zookeeper:zk
   environment:
-    KAFKA_ADVERTISED_HOST_NAME: 192.168.59.103
+    KAFKA_ADVERTISED_HOST_NAME: 172.17.42.1
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
